--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 psycopg2-binary = "*"
 django-crispy-forms = "==1.8.0"
 django-allauth = "==0.41.0"
+pillow = "*"
 
 [requires]
 python_version = "3.7"
