--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ psycopg2-binary = "*"
 django-crispy-forms = "==1.8.0"
 django-allauth = "==0.41.0"
 pillow = "*"
+stripe = "==2.32.0"
 
 [requires]
 python_version = "3.7"
