--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-crispy-forms = "==1.8.0"
 django-allauth = "==0.41.0"
 pillow = "*"
 stripe = "==2.32.0"
+django-debug-toolbar = "*"
 
 [requires]
 python_version = "3.7"
